cylite_A3/yapl.output
State 27 conflicts: 1 shift/reduce
State 515 conflicts: 1 reduce/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | string
    4                   | '(' expression ')'
    5                   | generic_selection

    6 constant: I_CONSTANT
    7         | F_CONSTANT
    8         | ENUMERATION_CONSTANT

    9 enumeration_constant: IDENTIFIER

   10 string: STRING_LITERAL
   11       | FUNC_NAME

   12 generic_selection: GENERIC '(' assignment_expression ',' generic_assoc_list ')'

   13 generic_assoc_list: generic_association
   14                   | generic_assoc_list ',' generic_association

   15 generic_association: type_name ':' assignment_expression
   16                    | DEFAULT ':' assignment_expression

   17 postfix_expression: primary_expression
   18                   | postfix_expression '[' expression ']'
   19                   | postfix_expression '(' ')'
   20                   | postfix_expression '(' argument_expression_list ')'
   21                   | postfix_expression '.' IDENTIFIER
   22                   | postfix_expression PTR_OP IDENTIFIER
   23                   | postfix_expression INC_OP
   24                   | postfix_expression DEC_OP
   25                   | '(' type_name ')' '{' initializer_list '}'
   26                   | '(' type_name ')' '{' initializer_list ',' '}'
   27                   | PRINT '(' ')'
   28                   | PRINT '(' argument_expression_list ')'

   29 argument_expression_list: assignment_expression
   30                         | argument_expression_list ',' assignment_expression

   31 unary_expression: postfix_expression
   32                 | INC_OP unary_expression
   33                 | DEC_OP unary_expression
   34                 | unary_operator cast_expression
   35                 | SIZEOF unary_expression
   36                 | SIZEOF '(' type_name ')'
   37                 | ALIGNOF '(' type_name ')'

   38 unary_operator: '&'
   39               | '*'
   40               | '+'
   41               | '-'
   42               | '~'
   43               | '!'

   44 cast_expression: unary_expression
   45                | '(' type_name ')' cast_expression

   46 multiplicative_expression: cast_expression
   47                          | multiplicative_expression '*' cast_expression
   48                          | multiplicative_expression '/' cast_expression
   49                          | multiplicative_expression '%' cast_expression

   50 additive_expression: multiplicative_expression
   51                    | additive_expression '+' multiplicative_expression
   52                    | additive_expression '-' multiplicative_expression

   53 shift_expression: additive_expression
   54                 | shift_expression LEFT_OP additive_expression
   55                 | shift_expression RIGHT_OP additive_expression

   56 relational_expression: shift_expression
   57                      | relational_expression '<' shift_expression
   58                      | relational_expression '>' shift_expression
   59                      | relational_expression LE_OP shift_expression
   60                      | relational_expression GE_OP shift_expression
   61                      | relational_expression TH_OP shift_expression

   62 equality_expression: relational_expression
   63                    | equality_expression EQ_OP relational_expression
   64                    | equality_expression NE_OP relational_expression

   65 and_expression: equality_expression
   66               | and_expression '&' equality_expression

   67 exclusive_or_expression: and_expression
   68                        | exclusive_or_expression '^' and_expression

   69 inclusive_or_expression: exclusive_or_expression
   70                        | inclusive_or_expression '|' exclusive_or_expression

   71 logical_and_expression: inclusive_or_expression
   72                       | logical_and_expression AND_OP inclusive_or_expression

   73 logical_or_expression: logical_and_expression
   74                      | logical_or_expression OR_OP logical_and_expression

   75 conditional_expression: logical_or_expression

   76 assignment_expression: conditional_expression
   77                      | unary_expression assignment_operator assignment_expression

   78 assignment_operator: '='
   79                    | MUL_ASSIGN
   80                    | DIV_ASSIGN
   81                    | MOD_ASSIGN
   82                    | ADD_ASSIGN
   83                    | SUB_ASSIGN
   84                    | LEFT_ASSIGN
   85                    | RIGHT_ASSIGN
   86                    | AND_ASSIGN
   87                    | XOR_ASSIGN
   88                    | OR_ASSIGN

   89 expression: assignment_expression
   90           | expression ',' assignment_expression

   91 constant_expression: conditional_expression

   92 declaration: declaration_specifiers ';'
   93            | declaration_specifiers init_declarator_list ';'
   94            | static_assert_declaration

   95 declaration_specifiers: storage_class_specifier declaration_specifiers
   96                       | storage_class_specifier
   97                       | type_specifier declaration_specifiers
   98                       | type_specifier
   99                       | type_qualifier declaration_specifiers
  100                       | type_qualifier
  101                       | function_specifier declaration_specifiers
  102                       | function_specifier
  103                       | alignment_specifier declaration_specifiers
  104                       | alignment_specifier

  105 init_declarator_list: init_declarator
  106                     | init_declarator_list ',' init_declarator

  107 init_declarator: declarator '=' initializer
  108                | declarator

  109 storage_class_specifier: TYPEDEF
  110                        | EXTERN
  111                        | STATIC
  112                        | THREAD_LOCAL
  113                        | AUTO
  114                        | REGISTER

  115 type_specifier: VOID
  116               | CHAR
  117               | SHORT
  118               | INT
  119               | LONG
  120               | FLOAT
  121               | DOUBLE
  122               | SIGNED
  123               | UNSIGNED
  124               | BOOL
  125               | COMPLEX
  126               | IMAGINARY
  127               | atomic_type_specifier
  128               | struct_or_union_specifier
  129               | enum_specifier
  130               | TYPEDEF_NAME

  131 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
  132                          | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  133                          | struct_or_union IDENTIFIER

  134 struct_or_union: STRUCT
  135                | UNION

  136 struct_declaration_list: struct_declaration
  137                        | struct_declaration_list struct_declaration

  138 struct_declaration: specifier_qualifier_list ';'
  139                   | specifier_qualifier_list struct_declarator_list ';'
  140                   | static_assert_declaration

  141 specifier_qualifier_list: type_specifier specifier_qualifier_list
  142                         | type_specifier
  143                         | type_qualifier specifier_qualifier_list
  144                         | type_qualifier

  145 struct_declarator_list: struct_declarator
  146                       | struct_declarator_list ',' struct_declarator

  147 struct_declarator: ':' constant_expression
  148                  | declarator ':' constant_expression
  149                  | declarator

  150 enum_specifier: ENUM '{' enumerator_list '}'
  151               | ENUM '{' enumerator_list ',' '}'
  152               | ENUM IDENTIFIER '{' enumerator_list '}'
  153               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  154               | ENUM IDENTIFIER

  155 enumerator_list: enumerator
  156                | enumerator_list ',' enumerator

  157 enumerator: enumeration_constant '=' constant_expression
  158           | enumeration_constant

  159 atomic_type_specifier: ATOMIC '(' type_name ')'

  160 type_qualifier: CONST
  161               | RESTRICT
  162               | VOLATILE
  163               | ATOMIC

  164 function_specifier: INLINE
  165                   | NORETURN

  166 alignment_specifier: ALIGNAS '(' type_name ')'
  167                    | ALIGNAS '(' constant_expression ')'

  168 declarator: pointer direct_declarator
  169           | direct_declarator

  170 direct_declarator: IDENTIFIER
  171                  | '(' declarator ')'
  172                  | direct_declarator '[' ']'
  173                  | direct_declarator '[' '*' ']'
  174                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  175                  | direct_declarator '[' STATIC assignment_expression ']'
  176                  | direct_declarator '[' type_qualifier_list '*' ']'
  177                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  178                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  179                  | direct_declarator '[' type_qualifier_list ']'
  180                  | direct_declarator '[' assignment_expression ']'
  181                  | direct_declarator '(' parameter_type_list ')'
  182                  | direct_declarator '(' ')'
  183                  | direct_declarator '(' identifier_list ')'

  184 pointer: '*' type_qualifier_list pointer
  185        | '*' type_qualifier_list
  186        | '*' pointer
  187        | '*'

  188 type_qualifier_list: type_qualifier
  189                    | type_qualifier_list type_qualifier

  190 parameter_type_list: parameter_list ',' ELLIPSIS
  191                    | parameter_list

  192 parameter_list: parameter_declaration
  193               | parameter_list ',' parameter_declaration

  194 parameter_declaration: declaration_specifiers declarator
  195                      | declaration_specifiers abstract_declarator
  196                      | declaration_specifiers

  197 identifier_list: IDENTIFIER
  198                | identifier_list ',' IDENTIFIER

  199 type_name: specifier_qualifier_list abstract_declarator
  200          | specifier_qualifier_list

  201 abstract_declarator: pointer direct_abstract_declarator
  202                    | pointer
  203                    | direct_abstract_declarator

  204 direct_abstract_declarator: '(' abstract_declarator ')'
  205                           | '[' ']'
  206                           | '[' '*' ']'
  207                           | '[' STATIC type_qualifier_list assignment_expression ']'
  208                           | '[' STATIC assignment_expression ']'
  209                           | '[' type_qualifier_list STATIC assignment_expression ']'
  210                           | '[' type_qualifier_list assignment_expression ']'
  211                           | '[' type_qualifier_list ']'
  212                           | '[' assignment_expression ']'
  213                           | direct_abstract_declarator '[' ']'
  214                           | direct_abstract_declarator '[' '*' ']'
  215                           | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  216                           | direct_abstract_declarator '[' STATIC assignment_expression ']'
  217                           | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
  218                           | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  219                           | direct_abstract_declarator '[' type_qualifier_list ']'
  220                           | direct_abstract_declarator '[' assignment_expression ']'
  221                           | '(' ')'
  222                           | '(' parameter_type_list ')'
  223                           | direct_abstract_declarator '(' ')'
  224                           | direct_abstract_declarator '(' parameter_type_list ')'

  225 initializer: '{' initializer_list '}'
  226            | '{' initializer_list ',' '}'
  227            | assignment_expression

  228 initializer_list: designation initializer
  229                 | initializer
  230                 | initializer_list ',' designation initializer
  231                 | initializer_list ',' initializer

  232 designation: designator_list '='

  233 designator_list: designator
  234                | designator_list designator

  235 designator: '[' constant_expression ']'
  236           | '.' IDENTIFIER

  237 static_assert_declaration: STATIC_ASSERT '(' constant_expression ',' STRING_LITERAL ')' ';'

  238 try_except_statement: TRY compound_statement EXCEPT compound_statement

  239 statement: labeled_statement
  240          | compound_statement
  241          | expression_statement
  242          | selection_statement
  243          | iteration_statement
  244          | jump_statement
  245          | try_except_statement
  246          | PASS ';'

  247 labeled_statement: IDENTIFIER ':' statement
  248                  | CASE constant_expression ':' statement
  249                  | DEFAULT ':' statement

  250 compound_statement: '{' '}'
  251                   | '{' block_item_list '}'

  252 block_item_list: block_item
  253                | block_item_list block_item

  254 block_item: declaration
  255           | statement

  256 expression_statement: ';'
  257                     | expression ';'

  258 elif_list: ELIF '(' expression ')' statement
  259          | elif_list ELIF '(' expression ')' statement

  260 $@1: ε

  261 selection_statement: IF '(' expression ')' statement ELSE $@1 statement
  262                    | IF '(' expression ')' statement

  263 $@2: ε

  264 selection_statement: IF '(' expression ')' statement elif_list ELSE $@2 statement
  265                    | IF '(' expression ')' statement elif_list
  266                    | SWITCH '(' expression ')' statement

  267 iteration_statement: WHILE '(' expression ')' statement
  268                    | DO statement WHILE '(' expression ')' ';'
  269                    | FOR '(' expression_statement expression_statement ')' statement
  270                    | FOR '(' expression_statement expression_statement expression ')' statement
  271                    | FOR '(' declaration expression_statement ')' statement
  272                    | FOR '(' declaration expression_statement expression ')' statement
  273                    | FOR '(' IDENTIFIER IN RANGE '(' expression ',' expression ')' ')' statement
  274                    | FOREACH '(' IDENTIFIER IN expression ')' compound_statement

  275 jump_statement: GOTO IDENTIFIER ';'
  276               | CONTINUE ';'
  277               | BREAK ';'
  278               | RETURN ';'
  279               | RETURN expression ';'

  280 translation_unit: external_declaration
  281                 | translation_unit external_declaration

  282 external_declaration: function_definition
  283                     | declaration

  284 function_definition: declaration_specifiers declarator declaration_list compound_statement
  285                    | declaration_specifiers declarator compound_statement

  286 declaration_list: declaration
  287                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 43
    '%' (37) 49
    '&' (38) 38 66
    '(' (40) 4 12 19 20 25 26 27 28 36 37 45 159 166 167 171 181 182 183 204 221 222 223 224 237 258 259 261 262 264 265 266 267 268 269 270 271 272 273 274
    ')' (41) 4 12 19 20 25 26 27 28 36 37 45 159 166 167 171 181 182 183 204 221 222 223 224 237 258 259 261 262 264 265 266 267 268 269 270 271 272 273 274
    '*' (42) 39 47 173 176 184 185 186 187 206 214
    '+' (43) 40 51
    ',' (44) 12 14 26 30 90 106 146 151 153 156 190 193 198 226 230 231 237 273
    '-' (45) 41 52
    '.' (46) 21 236
    '/' (47) 48
    ':' (58) 15 16 147 148 247 248 249
    ';' (59) 92 93 138 139 237 246 256 257 268 275 276 277 278 279
    '<' (60) 57
    '=' (61) 78 107 157 232
    '>' (62) 58
    '[' (91) 18 172 173 174 175 176 177 178 179 180 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 220 235
    ']' (93) 18 172 173 174 175 176 177 178 179 180 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 220 235
    '^' (94) 68
    '{' (123) 25 26 131 132 150 151 152 153 225 226 250 251
    '|' (124) 70
    '}' (125) 25 26 131 132 150 151 152 153 225 226 250 251
    '~' (126) 42
    error (256)
    ELIF (258) 258 259
    PASS (259) 246
    TRY (260) 238
    EXCEPT (261) 238
    PRINT (262) 27 28
    RANGE (263) 273
    IN (264) 273 274
    FOREACH (265) 274
    IDENTIFIER (266) 1 9 21 22 132 133 152 153 154 170 197 198 236 247 273 274 275
    I_CONSTANT (267) 6
    F_CONSTANT (268) 7
    STRING_LITERAL (269) 10 237
    FUNC_NAME (270) 11
    SIZEOF (271) 35 36
    PTR_OP (272) 22
    INC_OP (273) 23 32
    DEC_OP (274) 24 33
    LEFT_OP (275) 54
    RIGHT_OP (276) 55
    LE_OP (277) 59
    GE_OP (278) 60
    EQ_OP (279) 63
    NE_OP (280) 64
    TH_OP (281) 61
    AND_OP (282) 72
    OR_OP (283) 74
    MUL_ASSIGN (284) 79
    DIV_ASSIGN (285) 80
    MOD_ASSIGN (286) 81
    ADD_ASSIGN (287) 82
    SUB_ASSIGN (288) 83
    LEFT_ASSIGN (289) 84
    RIGHT_ASSIGN (290) 85
    AND_ASSIGN (291) 86
    XOR_ASSIGN (292) 87
    OR_ASSIGN (293) 88
    TYPEDEF_NAME (294) 130
    ENUMERATION_CONSTANT (295) 8
    TYPEDEF (296) 109
    EXTERN (297) 110
    STATIC (298) 111 174 175 177 207 208 209 215 216 218
    AUTO (299) 113
    REGISTER (300) 114
    INLINE (301) 164
    CONST (302) 160
    RESTRICT (303) 161
    VOLATILE (304) 162
    BOOL (305) 124
    CHAR (306) 116
    SHORT (307) 117
    INT (308) 118
    LONG (309) 119
    SIGNED (310) 122
    UNSIGNED (311) 123
    FLOAT (312) 120
    DOUBLE (313) 121
    VOID (314) 115
    COMPLEX (315) 125
    IMAGINARY (316) 126
    STRUCT (317) 134
    UNION (318) 135
    ENUM (319) 150 151 152 153 154
    ELLIPSIS (320) 190
    CASE <val> (321) 248
    DEFAULT <val> (322) 16 249
    IF <val> (323) 261 262 264 265
    ELSE <val> (324) 261 264
    SWITCH <val> (325) 266
    WHILE <val> (326) 267 268
    DO <val> (327) 268
    FOR <val> (328) 269 270 271 272 273
    GOTO <val> (329) 275
    CONTINUE <val> (330) 276
    BREAK <val> (331) 277
    RETURN <val> (332) 278 279
    ALIGNAS (333) 166 167
    ALIGNOF (334) 37
    ATOMIC (335) 159 163
    GENERIC (336) 12
    NORETURN (337) 165
    STATIC_ASSERT (338) 237
    THREAD_LOCAL (339) 112
    LOWER_THAN_ELSE (340)


Nonterminals, with rules where they appear

    $accept (109)
        on left: 0
    primary_expression (110)
        on left: 1 2 3 4 5
        on right: 17
    constant (111)
        on left: 6 7 8
        on right: 2
    enumeration_constant (112)
        on left: 9
        on right: 157 158
    string (113)
        on left: 10 11
        on right: 3
    generic_selection (114)
        on left: 12
        on right: 5
    generic_assoc_list (115)
        on left: 13 14
        on right: 12 14
    generic_association (116)
        on left: 15 16
        on right: 13 14
    postfix_expression (117)
        on left: 17 18 19 20 21 22 23 24 25 26 27 28
        on right: 18 19 20 21 22 23 24 31
    argument_expression_list (118)
        on left: 29 30
        on right: 20 28 30
    unary_expression (119)
        on left: 31 32 33 34 35 36 37
        on right: 32 33 35 44 77
    unary_operator (120)
        on left: 38 39 40 41 42 43
        on right: 34
    cast_expression (121)
        on left: 44 45
        on right: 34 45 46 47 48 49
    multiplicative_expression (122)
        on left: 46 47 48 49
        on right: 47 48 49 50 51 52
    additive_expression (123)
        on left: 50 51 52
        on right: 51 52 53 54 55
    shift_expression (124)
        on left: 53 54 55
        on right: 54 55 56 57 58 59 60 61
    relational_expression (125)
        on left: 56 57 58 59 60 61
        on right: 57 58 59 60 61 62 63 64
    equality_expression (126)
        on left: 62 63 64
        on right: 63 64 65 66
    and_expression (127)
        on left: 65 66
        on right: 66 67 68
    exclusive_or_expression (128)
        on left: 67 68
        on right: 68 69 70
    inclusive_or_expression (129)
        on left: 69 70
        on right: 70 71 72
    logical_and_expression (130)
        on left: 71 72
        on right: 72 73 74
    logical_or_expression (131)
        on left: 73 74
        on right: 74 75
    conditional_expression (132)
        on left: 75
        on right: 76 91
    assignment_expression (133)
        on left: 76 77
        on right: 12 15 16 29 30 77 89 90 174 175 177 178 180 207 208 209 210 212 215 216 217 218 220 227
    assignment_operator (134)
        on left: 78 79 80 81 82 83 84 85 86 87 88
        on right: 77
    expression (135)
        on left: 89 90
        on right: 4 18 90 257 258 259 261 262 264 265 266 267 268 270 272 273 274 279
    constant_expression (136)
        on left: 91
        on right: 147 148 157 167 235 237 248
    declaration (137)
        on left: 92 93 94
        on right: 254 271 272 283 286 287
    declaration_specifiers (138)
        on left: 95 96 97 98 99 100 101 102 103 104
        on right: 92 93 95 97 99 101 103 194 195 196 284 285
    init_declarator_list (139)
        on left: 105 106
        on right: 93 106
    init_declarator (140)
        on left: 107 108
        on right: 105 106
    storage_class_specifier (141)
        on left: 109 110 111 112 113 114
        on right: 95 96
    type_specifier (142)
        on left: 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130
        on right: 97 98 141 142
    struct_or_union_specifier (143)
        on left: 131 132 133
        on right: 128
    struct_or_union (144)
        on left: 134 135
        on right: 131 132 133
    struct_declaration_list (145)
        on left: 136 137
        on right: 131 132 137
    struct_declaration (146)
        on left: 138 139 140
        on right: 136 137
    specifier_qualifier_list (147)
        on left: 141 142 143 144
        on right: 138 139 141 143 199 200
    struct_declarator_list (148)
        on left: 145 146
        on right: 139 146
    struct_declarator (149)
        on left: 147 148 149
        on right: 145 146
    enum_specifier (150)
        on left: 150 151 152 153 154
        on right: 129
    enumerator_list (151)
        on left: 155 156
        on right: 150 151 152 153 156
    enumerator (152)
        on left: 157 158
        on right: 155 156
    atomic_type_specifier (153)
        on left: 159
        on right: 127
    type_qualifier (154)
        on left: 160 161 162 163
        on right: 99 100 143 144 188 189
    function_specifier (155)
        on left: 164 165
        on right: 101 102
    alignment_specifier (156)
        on left: 166 167
        on right: 103 104
    declarator (157)
        on left: 168 169
        on right: 107 108 148 149 171 194 284 285
    direct_declarator (158)
        on left: 170 171 172 173 174 175 176 177 178 179 180 181 182 183
        on right: 168 169 172 173 174 175 176 177 178 179 180 181 182 183
    pointer (159)
        on left: 184 185 186 187
        on right: 168 184 186 201 202
    type_qualifier_list (160)
        on left: 188 189
        on right: 174 176 177 178 179 184 185 189 207 209 210 211 215 217 218 219
    parameter_type_list (161)
        on left: 190 191
        on right: 181 222 224
    parameter_list (162)
        on left: 192 193
        on right: 190 191 193
    parameter_declaration (163)
        on left: 194 195 196
        on right: 192 193
    identifier_list (164)
        on left: 197 198
        on right: 183 198
    type_name (165)
        on left: 199 200
        on right: 15 25 26 36 37 45 159 166
    abstract_declarator (166)
        on left: 201 202 203
        on right: 195 199 204
    direct_abstract_declarator (167)
        on left: 204 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 220 221 222 223 224
        on right: 201 203 213 214 215 216 217 218 219 220 223 224
    initializer (168)
        on left: 225 226 227
        on right: 107 228 229 230 231
    initializer_list (169)
        on left: 228 229 230 231
        on right: 25 26 225 226 230 231
    designation (170)
        on left: 232
        on right: 228 230
    designator_list (171)
        on left: 233 234
        on right: 232 234
    designator (172)
        on left: 235 236
        on right: 233 234
    static_assert_declaration (173)
        on left: 237
        on right: 94 140
    try_except_statement (174)
        on left: 238
        on right: 245
    statement (175)
        on left: 239 240 241 242 243 244 245 246
        on right: 247 248 249 255 258 259 261 262 264 265 266 267 268 269 270 271 272 273
    labeled_statement (176)
        on left: 247 248 249
        on right: 239
    compound_statement (177)
        on left: 250 251
        on right: 238 240 274 284 285
    block_item_list (178)
        on left: 252 253
        on right: 251 253
    block_item (179)
        on left: 254 255
        on right: 252 253
    expression_statement (180)
        on left: 256 257
        on right: 241 269 270 271 272
    elif_list (181)
        on left: 258 259
        on right: 259 264 265
    selection_statement (182)
        on left: 261 262 264 265 266
        on right: 242
    $@1 (183)
        on left: 260
        on right: 261
    $@2 (184)
        on left: 263
        on right: 264
    iteration_statement (185)
        on left: 267 268 269 270 271 272 273 274
        on right: 243
    jump_statement (186)
        on left: 275 276 277 278 279
        on right: 244
    translation_unit (187)
        on left: 280 281
        on right: 0 281
    external_declaration (188)
        on left: 282 283
        on right: 280 281
    function_definition (189)
        on left: 284 285
        on right: 282
    declaration_list (190)
        on left: 286 287
        on right: 284 287


State 0

    0 $accept: • translation_unit $end

    TYPEDEF_NAME   shift, and go to state 1
    TYPEDEF        shift, and go to state 2
    EXTERN         shift, and go to state 3
    STATIC         shift, and go to state 4
    AUTO           shift, and go to state 5
    REGISTER       shift, and go to state 6
    INLINE         shift, and go to state 7
    CONST          shift, and go to state 8
    RESTRICT       shift, and go to state 9
    VOLATILE       shift, and go to state 10
    BOOL           shift, and go to state 11
    CHAR           shift, and go to state 12
    SHORT          shift, and go to state 13
    INT            shift, and go to state 14
    LONG           shift, and go to state 15
    SIGNED         shift, and go to state 16
    UNSIGNED       shift, and go to state 17
    FLOAT          shift, and go to state 18
    DOUBLE         shift, and go to state 19
    VOID           shift, and go to state 20
    COMPLEX        shift, and go to state 21
    IMAGINARY      shift, and go to state 22
    STRUCT         shift, and go to state 23
    UNION          shift, and go to state 24
    ENUM           shift, and go to state 25
    ALIGNAS        shift, and go to state 26
    ATOMIC         shift, and go to state 27
    NORETURN       shift, and go to state 28
    STATIC_ASSERT  shift, and go to state 29
    THREAD_LOCAL   shift, and go to state 30

    declaration                go to state 31
    declaration_specifiers     go to state 32
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41
    static_assert_declaration  go to state 42
    translation_unit           go to state 43
    external_declaration       go to state 44
    function_definition        go to state 45


State 1

  130 type_specifier: TYPEDEF_NAME •

    $default  reduce using rule 130 (type_specifier)


State 2

  109 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 109 (storage_class_specifier)


State 3

  110 storage_class_specifier: EXTERN •

    $default  reduce using rule 110 (storage_class_specifier)


State 4

  111 storage_class_specifier: STATIC •

    $default  reduce using rule 111 (storage_class_specifier)


State 5

  113 storage_class_specifier: AUTO •

    $default  reduce using rule 113 (storage_class_specifier)


State 6

  114 storage_class_specifier: REGISTER •

    $default  reduce using rule 114 (storage_class_specifier)


State 7

  164 function_specifier: INLINE •

    $default  reduce using rule 164 (function_specifier)


State 8

  160 type_qualifier: CONST •

    $default  reduce using rule 160 (type_qualifier)


State 9

  161 type_qualifier: RESTRICT •

    $default  reduce using rule 161 (type_qualifier)


State 10

  162 type_qualifier: VOLATILE •

    $default  reduce using rule 162 (type_qualifier)


State 11

  124 type_specifier: BOOL •

    $default  reduce using rule 124 (type_specifier)


State 12

  116 type_specifier: CHAR •

    $default  reduce using rule 116 (type_specifier)


State 13

  117 type_specifier: SHORT •

    $default  reduce using rule 117 (type_specifier)


State 14

  118 type_specifier: INT •

    $default  reduce using rule 118 (type_specifier)


State 15

  119 type_specifier: LONG •

    $default  reduce using rule 119 (type_specifier)


State 16

  122 type_specifier: SIGNED •

    $default  reduce using rule 122 (type_specifier)


State 17

  123 type_specifier: UNSIGNED •

    $default  reduce using rule 123 (type_specifier)


State 18

  120 type_specifier: FLOAT •

    $default  reduce using rule 120 (type_specifier)


State 19

  121 type_specifier: DOUBLE •

    $default  reduce using rule 121 (type_specifier)


State 20

  115 type_specifier: VOID •

    $default  reduce using rule 115 (type_specifier)


State 21

  125 type_specifier: COMPLEX •

    $default  reduce using rule 125 (type_specifier)


State 22

  126 type_specifier: IMAGINARY •

    $default  reduce using rule 126 (type_specifier)


State 23

  134 struct_or_union: STRUCT •

    $default  reduce using rule 134 (struct_or_union)


State 24

  135 struct_or_union: UNION •

    $default  reduce using rule 135 (struct_or_union)


State 25

  150 enum_specifier: ENUM • '{' enumerator_list '}'
  151               | ENUM • '{' enumerator_list ',' '}'
  152               | ENUM • IDENTIFIER '{' enumerator_list '}'
  153               | ENUM • IDENTIFIER '{' enumerator_list ',' '}'
  154               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 46
    '{'         shift, and go to state 47


State 26

  166 alignment_specifier: ALIGNAS • '(' type_name ')'
  167                    | ALIGNAS • '(' constant_expression ')'

    '('  shift, and go to state 48


State 27

  159 atomic_type_specifier: ATOMIC • '(' type_name ')'
  163 type_qualifier: ATOMIC •

    '('  shift, and go to state 49

    '('       [reduce using rule 163 (type_qualifier)]
    $default  reduce using rule 163 (type_qualifier)


State 28

  165 function_specifier: NORETURN •

    $default  reduce using rule 165 (function_specifier)


State 29

  237 static_assert_declaration: STATIC_ASSERT • '(' constant_expression ',' STRING_LITERAL ')' ';'

    '('  shift, and go to state 50


State 30

  112 storage_class_specifier: THREAD_LOCAL •

    $default  reduce using rule 112 (storage_class_specifier)


State 31

  283 external_declaration: declaration •

    $default  reduce using rule 283 (external_declaration)


State 32

   92 declaration: declaration_specifiers • ';'
   93            | declaration_specifiers • init_declarator_list ';'
  284 function_definition: declaration_specifiers • declarator declaration_list compound_statement
  285                    | declaration_specifiers • declarator compound_statement

    IDENTIFIER  shift, and go to state 51
    '('         shift, and go to state 52
    '*'         shift, and go to state 53
    ';'         shift, and go to state 54

    init_declarator_list  go to state 55
    init_declarator       go to state 56
    declarator            go to state 57
    direct_declarator     go to state 58
    pointer               go to state 59


State 33

   95 declaration_specifiers: storage_class_specifier • declaration_specifiers
   96                       | storage_class_specifier •

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 96 (declaration_specifiers)

    declaration_specifiers     go to state 60
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41


State 34

   97 declaration_specifiers: type_specifier • declaration_specifiers
   98                       | type_specifier •

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 98 (declaration_specifiers)

    declaration_specifiers     go to state 61
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41


State 35

  128 type_specifier: struct_or_union_specifier •

    $default  reduce using rule 128 (type_specifier)


State 36

  131 struct_or_union_specifier: struct_or_union • '{' struct_declaration_list '}'
  132                          | struct_or_union • IDENTIFIER '{' struct_declaration_list '}'
  133                          | struct_or_union • IDENTIFIER

    IDENTIFIER  shift, and go to state 62
    '{'         shift, and go to state 63


State 37

  129 type_specifier: enum_specifier •

    $default  reduce using rule 129 (type_specifier)


State 38

  127 type_specifier: atomic_type_specifier •

    $default  reduce using rule 127 (type_specifier)


State 39

   99 declaration_specifiers: type_qualifier • declaration_specifiers
  100                       | type_qualifier •
